Make sure there is no crash on parsing empty manifest

Changes match the logic in SourceHighlighter in the same file and will
result in UI showing message akin to 'No source file available'. This is fine
as already the same happens for other source files in bundled extensions.

BUG=627896

Review-Url: https://codereview.chromium.org/2245143004
Cr-Commit-Position: refs/heads/master@{#412556}

Former-commit-id: c4ae40ddcf81bddd262d56b9a7523466a4adba8f